--- a/case-studies.html
+++ b/case-studies.html
@@ -106,43 +106,25 @@
                     negotiate, execute, and report on advertising campaigns.
                   </p>
                 </section>
-                <div class="case-studies__airport-grid airport-grid space-mg-t-sm">
-                  <div class="airport-grid__item">
+                <div class="case-studies__airport-grid airport-grid space-mg-t-sm"><a class="airport-grid__item" href="#">
                     <div class="airport-grid__image"><img src="img/home/articles/case-studies/dynatrace_photo1_a1.webp" alt="Dynatrace"></div>
-                    <div class="airport-grid__icon"><img src="img/logos-colored/dynatrace.webp" alt="Dynatrace Logo"></div>
-                  </div>
-                  <div class="airport-grid__item">
+                    <div class="airport-grid__icon"><img src="img/logos-colored/dynatrace.webp" alt="Dynatrace Logo"></div></a><a class="airport-grid__item" href="#">
                     <div class="airport-grid__image"><img src="img/home/articles/case-studies/fortinet_photo1_a1.webp" alt="Fortinet"></div>
-                    <div class="airport-grid__icon"><img src="img/logos-colored/fortinet.webp" alt="Fortinet Logo"></div>
-                  </div>
-                  <div class="airport-grid__item">
+                    <div class="airport-grid__icon"><img src="img/logos-colored/fortinet.webp" alt="Fortinet Logo"></div></a><a class="airport-grid__item" href="#">
                     <div class="airport-grid__image"><img src="img/home/articles/case-studies/fortinet_photo1_a1.webp" alt="Invest in Canada"></div>
-                    <div class="airport-grid__icon"><img src="img/logos-colored/dynatrace.webp" alt="Invest in Canada Logo"></div>
-                  </div>
-                  <div class="airport-grid__item">
+                    <div class="airport-grid__icon"><img src="img/logos-colored/dynatrace.webp" alt="Invest in Canada Logo"></div></a><a class="airport-grid__item" href="#">
                     <div class="airport-grid__image"><img src="img/home/articles/case-studies/radisson_photo1_a1.webp" alt="Radisson"></div>
-                    <div class="airport-grid__icon"><img src="img/logos-colored/radisson.webp" alt="Radisson Logo"></div>
-                  </div>
-                  <div class="airport-grid__item">
+                    <div class="airport-grid__icon"><img src="img/logos-colored/radisson.webp" alt="Radisson Logo"></div></a><a class="airport-grid__item" href="#">
                     <div class="airport-grid__image"><img src="img/home/articles/case-studies/fabric_photo2_a1.webp" alt="Fabric"></div>
-                    <div class="airport-grid__icon"><img src="img/logos-colored/fabric.webp" alt="Fabric Logo"></div>
-                  </div>
-                  <div class="airport-grid__item">
+                    <div class="airport-grid__icon"><img src="img/logos-colored/fabric.webp" alt="Fabric Logo"></div></a><a class="airport-grid__item" href="#">
                     <div class="airport-grid__image"><img src="img/home/articles/case-studies/university_of_penn_photo2_a1.webp" alt="University of Pennsylvania"></div>
-                    <div class="airport-grid__icon"><img src="img/logos-colored/wharton.webp" alt="University of Pennsylvania Logo"></div>
-                  </div>
-                  <div class="airport-grid__item">
+                    <div class="airport-grid__icon"><img src="img/logos-colored/wharton.webp" alt="University of Pennsylvania Logo"></div></a><a class="airport-grid__item" href="#">
                     <div class="airport-grid__image"><img src="img/home/articles/case-studies/byu_photo2_a1.webp" alt="BYU"></div>
-                    <div class="airport-grid__icon"><img src="img/logos-colored/byu.webp" alt="BYU Logo"></div>
-                  </div>
-                  <div class="airport-grid__item">
+                    <div class="airport-grid__icon"><img src="img/logos-colored/byu.webp" alt="BYU Logo"></div></a><a class="airport-grid__item" href="#">
                     <div class="airport-grid__image"><img src="img/home/articles/case-studies/rauw_alejandro_photo1_a1.webp" alt="Rauw Alejandro"></div>
-                    <div class="airport-grid__icon"><img src="img/logos-colored/rauw_alejandro.webp" alt="Rauw Alejandro Logo"></div>
-                  </div>
-                  <div class="airport-grid__item">
+                    <div class="airport-grid__icon"><img src="img/logos-colored/rauw_alejandro.webp" alt="Rauw Alejandro Logo"></div></a><a class="airport-grid__item" href="#">
                     <div class="airport-grid__image"><img src="img/home/articles/case-studies/flexispot_photo1_a1.webp" alt="Flexispot"></div>
-                    <div class="airport-grid__icon"><img src="img/logos-colored/flexispot.webp" alt="Flexispot Logo"></div>
-                  </div>
+                    <div class="airport-grid__icon"><img src="img/logos-colored/flexispot.webp" alt="Flexispot Logo"></div></a>
                 </div>
                 <!-- Airports Section-->
                 <section class="case-studies__airports space-mg-v-sm" id="airports">
