--- a/index.html
+++ b/index.html
@@ -2242,14 +2242,24 @@
         <div class="container">
           <!-- Row-->
           <div class="footer__row">
-            <!-- Logo-->
-            <div class="footer__logo"><a href="#"><img src="img/svg/eam-logo.svg" alt="Footer Logo"></a></div>
-            <!-- Links-->
-            <ul class="text-big footer__inline-links s-bold">
-              <li><a href="tel:8009361041">800-936-1041</a></li>
-              <li><a href="https://calendly.com/theairport/15min">Book a Call</a></li>
-              <li><a href="mailto:hello@theairport.org">Email us</a></li>
-            </ul>
+            <!-- Left-->
+            <div class="col-3-12 col-sm-full footer__left">
+              <!-- Logo-->
+              <div class="footer__logo footer__logo_home"><a href="#"><img src="img/svg/eam-logo.svg" alt="Footer Logo"></a></div>
+              <!-- Copyrights-->
+              <div class="footer__copy mg-t-16 footer__copy_home">
+                <p class="text-md mg-t-16">2023 &copy; EAM<br class="hidden-sm">All right reserved.</p>
+              </div>
+            </div>
+            <!-- Center, links-->
+            <div class="col-9-12 col-sm-full footer__center-right">
+              <!-- Links-->
+              <ul class="text-big footer__inline-links s-bold">
+                <li><a href="tel:8009361041">800-936-1041</a></li>
+                <li><a href="https://calendly.com/theairport/15min">Book a Call</a></li>
+                <li><a href="mailto:hello@theairport.org">Email us</a></li>
+              </ul>
+            </div>
           </div>
         </div>
       </footer>
