update JSON examples

--- a/examples.html
+++ b/examples.html
@@ -122,67 +122,63 @@
                       </div>
                       <!-- Content, bottom part-->
                       <div class="tabs__content">
-                        <!--1-->
                         <div class="tabs__content__item" id="digital">
                           <!-- Content-->
                           <div class="content mg-b-16">
-                            <h4>Digital Examples</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur, officia ullam? Atque, ducimus eligendi incidunt laborum non placeat quidem saepe similique. Accusamus accusantium aspernatur libero porro, repellat repellendus sed voluptatibus!</p>
+                            <h4>Digital airport examples</h4>
+                            <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.</p>
+                            <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.</p>
                           </div>
                           <!-- Img grid-->
                           <div class="img-grid">
-                            <div class="img-grid__item"><img alt="1" src="/img/dummy-images/1.webp"></div>
-                            <div class="img-grid__item"><img alt="2" src="/img/dummy-images/2.webp"></div>
-                            <div class="img-grid__item"><img alt="3" src="/img/dummy-images/3.webp"></div>
-                            <div class="img-grid__item"><img alt="4" src="/img/dummy-images/4.webp"></div>
-                            <div class="img-grid__item"><img alt="5" src="/img/dummy-images/5.webp"></div>
-                            <div class="img-grid__item"><img alt="1" src="/img/dummy-images/1.webp"></div>
-                            <div class="img-grid__item"><img alt="2" src="/img/dummy-images/2.webp"></div>
-                            <div class="img-grid__item"><img alt="3" src="/img/dummy-images/3.webp"></div>
-                            <div class="img-grid__item"><img alt="4" src="/img/dummy-images/4.webp"></div>
-                            <div class="img-grid__item"><img alt="5" src="/img/dummy-images/5.webp"></div>
+                            <div class="img-grid__item"><img alt="Digital airport examples" src="img/home/ad-examples/digital_example_1.webp"></div>
+                            <div class="img-grid__item"><img alt="Digital airport examples" src="img/home/ad-examples/digital_example_2.webp"></div>
+                            <div class="img-grid__item"><img alt="Digital airport examples" src="img/home/ad-examples/digital_example_3.webp"></div>
+                            <div class="img-grid__item"><img alt="Digital airport examples" src="img/home/ad-examples/digital_example_4.webp"></div>
+                            <div class="img-grid__item"><img alt="Digital airport examples" src="img/home/ad-examples/digital_example_5.webp"></div>
+                            <div class="img-grid__item"><img alt="Digital airport examples" src="img/home/ad-examples/digital_example_6.webp"></div>
+                            <div class="img-grid__item"><img alt="Digital airport examples" src="img/home/ad-examples/digital_example_7.webp"></div>
+                            <div class="img-grid__item"><img alt="Digital airport examples" src="img/home/ad-examples/digital_example_8.webp"></div>
+                            <div class="img-grid__item"><img alt="Digital airport examples" src="img/home/ad-examples/digital_example_9.webp"></div>
                           </div>
                         </div>
-                        <!--2-->
                         <div class="tabs__content__item" id="static">
                           <!-- Content-->
                           <div class="content mg-b-16">
-                            <h4>Static Examples</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi asperiores cum deserunt dicta doloribus ea enim esse et, ex explicabo facere nam nisi, omnis quisquam, rem tenetur ullam voluptas voluptatibus!</p>
+                            <h4>Static airport examples</h4>
+                            <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.</p>
                           </div>
                           <!-- Img grid-->
                           <div class="img-grid">
-                            <div class="img-grid__item"><img alt="4" src="/img/dummy-images/4.webp"></div>
-                            <div class="img-grid__item"><img alt="5" src="/img/dummy-images/5.webp"></div>
-                            <div class="img-grid__item"><img alt="1" src="/img/dummy-images/1.webp"></div>
-                            <div class="img-grid__item"><img alt="1" src="/img/dummy-images/1.webp"></div>
-                            <div class="img-grid__item"><img alt="2" src="/img/dummy-images/2.webp"></div>
-                            <div class="img-grid__item"><img alt="3" src="/img/dummy-images/3.webp"></div>
-                            <div class="img-grid__item"><img alt="2" src="/img/dummy-images/2.webp"></div>
-                            <div class="img-grid__item"><img alt="3" src="/img/dummy-images/3.webp"></div>
-                            <div class="img-grid__item"><img alt="4" src="/img/dummy-images/4.webp"></div>
-                            <div class="img-grid__item"><img alt="5" src="/img/dummy-images/5.webp"></div>
+                            <div class="img-grid__item"><img alt="Static airport examples" src="img/home/ad-examples/static_example_1.webp"></div>
+                            <div class="img-grid__item"><img alt="Static airport examples" src="img/home/ad-examples/static_example_2.webp"></div>
+                            <div class="img-grid__item"><img alt="Static airport examples" src="img/home/ad-examples/static_example_3.webp"></div>
+                            <div class="img-grid__item"><img alt="Static airport examples" src="img/home/ad-examples/static_example_4.webp"></div>
+                            <div class="img-grid__item"><img alt="Static airport examples" src="img/home/ad-examples/static_example_5.webp"></div>
+                            <div class="img-grid__item"><img alt="Static airport examples" src="img/home/ad-examples/static_example_6.webp"></div>
+                            <div class="img-grid__item"><img alt="Static airport examples" src="img/home/ad-examples/static_example_7.webp"></div>
+                            <div class="img-grid__item"><img alt="Static airport examples" src="img/home/ad-examples/static_example_8.webp"></div>
+                            <div class="img-grid__item"><img alt="Static airport examples" src="img/home/ad-examples/static_example_9.webp"></div>
                           </div>
                         </div>
-                        <!--3-->
                         <div class="tabs__content__item" id="other">
                           <!-- Content-->
                           <div class="content mg-b-16">
-                            <h4>Other Examples</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem ex impedit nesciunt quibusdam quis quisquam sed temporibus voluptates. Aliquam et eum excepturi illo iste magnam, nobis quas quo repudiandae veniam.</p>
+                            <h4>Other airport examples</h4>
+                            <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.</p>
+                            <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.</p>
                           </div>
                           <!-- Img grid-->
                           <div class="img-grid">
-                            <div class="img-grid__item"><img alt="1" src="/img/dummy-images/1.webp"></div>
-                            <div class="img-grid__item"><img alt="2" src="/img/dummy-images/2.webp"></div>
-                            <div class="img-grid__item"><img alt="3" src="/img/dummy-images/3.webp"></div>
-                            <div class="img-grid__item"><img alt="4" src="/img/dummy-images/4.webp"></div>
-                            <div class="img-grid__item"><img alt="5" src="/img/dummy-images/5.webp"></div>
-                            <div class="img-grid__item"><img alt="1" src="/img/dummy-images/1.webp"></div>
-                            <div class="img-grid__item"><img alt="2" src="/img/dummy-images/2.webp"></div>
-                            <div class="img-grid__item"><img alt="3" src="/img/dummy-images/3.webp"></div>
-                            <div class="img-grid__item"><img alt="4" src="/img/dummy-images/4.webp"></div>
-                            <div class="img-grid__item"><img alt="5" src="/img/dummy-images/5.webp"></div>
+                            <div class="img-grid__item"><img alt="Other airport examples" src="img/home/ad-examples/other_example_1.webp"></div>
+                            <div class="img-grid__item"><img alt="Other airport examples" src="img/home/ad-examples/other_example_2.webp"></div>
+                            <div class="img-grid__item"><img alt="Other airport examples" src="img/home/ad-examples/other_example_3.webp"></div>
+                            <div class="img-grid__item"><img alt="Other airport examples" src="img/home/ad-examples/other_example_4.webp"></div>
+                            <div class="img-grid__item"><img alt="Other airport examples" src="img/home/ad-examples/other_example_5.webp"></div>
+                            <div class="img-grid__item"><img alt="Other airport examples" src="img/home/ad-examples/other_example_6.webp"></div>
+                            <div class="img-grid__item"><img alt="Other airport examples" src="img/home/ad-examples/other_example_7.webp"></div>
+                            <div class="img-grid__item"><img alt="Other airport examples" src="img/home/ad-examples/other_example_8.webp"></div>
+                            <div class="img-grid__item"><img alt="Other airport examples" src="img/home/ad-examples/other_example_9.webp"></div>
                           </div>
                         </div>
                       </div>
