--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
                       </div>
                       <div class="items-img-v__item">
                         <div class="item-img-v" data-tab-target="invest-in-canada">
-                          <div class="item-img-v__img"><img alt="Invest in Canada" src="img/home/articles/case-studies/fortinet_photo1_a1.webp"></div>
+                          <div class="item-img-v__img"><img alt="Invest in Canada" src="img/home/articles/case-studies/invest_in_canada_photo1_a1.webp"></div>
                           <div class="item-img-v__title">Invest in Canada</div>
                         </div>
                       </div>
@@ -553,7 +553,7 @@
                                 <div class="col-5-12 col-sm-full">
                                   <div class="article-inline__img">
                                     <div class="picture-box">
-                                      <picture class="picture picture--second"><img alt="fortinet_photo1_a1" src="img/home/articles/case-studies/fortinet_photo1_a1.webp"></picture>
+                                      <picture class="picture picture--second"><img alt="invest_in_canada_photo1_a1" src="img/home/articles/case-studies/invest_in_canada_photo1_a1.webp"></picture>
                                     </div>
                                   </div>
                                 </div>
@@ -570,7 +570,7 @@
                                 <div class="col-5-12 col-sm-full">
                                   <div class="article-inline__img">
                                     <div class="picture-box">
-                                      <picture class="picture picture--second"><img alt="fortinet_photo2_a1" src="img/home/articles/case-studies/fortinet_photo2_a1.webp"></picture>
+                                      <picture class="picture picture--second"><img alt="invest_in_canada_photo2_a1" src="img/home/articles/case-studies/invest_in_canada_photo2_a1.webp"></picture>
                                     </div>
                                   </div>
                                 </div>
@@ -588,9 +588,9 @@
                                 <div class="col-5-12 col-sm-full">
                                   <div class="article-inline__img">
                                     <div class="picture-box">
-                                      <picture class="picture picture--second"><img alt="fortinet_photo3_a1" src="img/home/articles/case-studies/fortinet_photo3_a1.webp"></picture>
-                                      <picture class="picture picture--second"><img alt="fortinet_photo4_a1" src="img/home/articles/case-studies/fortinet_photo4_a1.webp"></picture>
-                                      <picture class="picture picture--second"><img alt="fortinet_photo5_a1" src="img/home/articles/case-studies/fortinet_photo5_a1.webp"></picture>
+                                      <picture class="picture picture--second"><img alt="invest_in_canada_photo3_a1" src="img/home/articles/case-studies/invest_in_canada_photo3_a1.webp"></picture>
+                                      <picture class="picture picture--second"><img alt="invest_in_canada_photo4_a1" src="img/home/articles/case-studies/invest_in_canada_photo4_a1.webp"></picture>
+                                      <picture class="picture picture--second"><img alt="invest_in_canada_photo5_a1" src="img/home/articles/case-studies/invest_in_canada_photo5_a1.webp"></picture>
                                     </div>
                                   </div>
                                 </div>
