update new pages

--- a/examples.html
+++ b/examples.html
@@ -24,7 +24,7 @@
     <link rel="apple-touch-icon" sizes="167x167" href="img/favicons/apple-touch-icon-167x167.png">
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicons/apple-touch-icon-180x180.png">
     <link rel="apple-touch-icon" sizes="1024x1024" href="img/favicons/apple-touch-icon-1024x1024.png">
-    <link rel="stylesheet" href="styles/main.min.css?_v=20230401205716">
+    <link rel="stylesheet" href="styles/main.min.css?_v=20230415181233">
     
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -630,7 +630,7 @@
             <div class="close-popup popup__close">&#x2715;</div>
             <div class="popup__body"><img class="popup__img" src="img/svg/check.svg" alt="Done">
               <h2 class="title-sm popup__title">Thank you.</h2>
-              <p class="text-md popup__text"><span class="active" id="question-form-text">Thank you. We will reach out to you shortly.</span><span id="cta-form-text">Media kit will be arriving shortly.</span></p>
+              <p class="text-md popup__text"><span id="cta-form-text">Media kit will be arriving shortly.</span><span id="question-form-text">Thank you. We will reach out to you shortly.</span></p>
               <div class="popup__cta"><span class="btn btn--second close-popup">Go Back</span></div>
             </div>
           </div>
@@ -670,6 +670,6 @@
         </div>
       </footer>
     </div>
-    <script src="js/main.min.js?_v=20230401205716"></script>
+    <script src="js/main.min.js?_v=20230415181233"></script>
   </body>
 </html>
