--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link rel="apple-touch-icon" sizes="167x167" href="img/favicons/apple-touch-icon-167x167.png">
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicons/apple-touch-icon-180x180.png">
     <link rel="apple-touch-icon" sizes="1024x1024" href="img/favicons/apple-touch-icon-1024x1024.png">
-    <link rel="stylesheet" href="styles/main.min.css?_v=20230401205716">
+    <link rel="stylesheet" href="styles/main.min.css?_v=20230415181233">
     
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -2749,47 +2749,47 @@
                         <div class="img-grid">
                           <div class="img-grid__item">
                             <picture>
-                              <source srcset="/img/home/ad-examples/digital_example_1.webp" type="image/webp"><img alt="digital_example_1" src="/img/home/ad-examples/digital_example_1.png">
+                              <source srcset="img/home/ad-examples/digital_example_1.webp" type="image/webp"><img alt="digital_example_1" src="img/home/ad-examples/digital_example_1.png">
                             </picture>
                           </div>
                           <div class="img-grid__item">
                             <picture>
-                              <source srcset="/img/home/ad-examples/digital_example_2.webp" type="image/webp"><img alt="digital_example_2" src="/img/home/ad-examples/digital_example_2.png">
+                              <source srcset="img/home/ad-examples/digital_example_2.webp" type="image/webp"><img alt="digital_example_2" src="img/home/ad-examples/digital_example_2.png">
                             </picture>
                           </div>
                           <div class="img-grid__item">
                             <picture>
-                              <source srcset="/img/home/ad-examples/digital_example_3.webp" type="image/webp"><img alt="digital_example_3" src="/img/home/ad-examples/digital_example_3.png">
+                              <source srcset="img/home/ad-examples/digital_example_3.webp" type="image/webp"><img alt="digital_example_3" src="img/home/ad-examples/digital_example_3.png">
                             </picture>
                           </div>
                           <div class="img-grid__item">
                             <picture>
-                              <source srcset="/img/home/ad-examples/digital_example_4.webp" type="image/webp"><img alt="digital_example_4" src="/img/home/ad-examples/digital_example_4.png">
+                              <source srcset="img/home/ad-examples/digital_example_4.webp" type="image/webp"><img alt="digital_example_4" src="img/home/ad-examples/digital_example_4.png">
                             </picture>
                           </div>
                           <div class="img-grid__item">
                             <picture>
-                              <source srcset="/img/home/ad-examples/digital_example_5.webp" type="image/webp"><img alt="digital_example_5" src="/img/home/ad-examples/digital_example_5.png">
+                              <source srcset="img/home/ad-examples/digital_example_5.webp" type="image/webp"><img alt="digital_example_5" src="img/home/ad-examples/digital_example_5.png">
                             </picture>
                           </div>
                           <div class="img-grid__item">
                             <picture>
-                              <source srcset="/img/home/ad-examples/digital_example_6.webp" type="image/webp"><img alt="digital_example_6" src="/img/home/ad-examples/digital_example_6.png">
+                              <source srcset="img/home/ad-examples/digital_example_6.webp" type="image/webp"><img alt="digital_example_6" src="img/home/ad-examples/digital_example_6.png">
                             </picture>
                           </div>
                           <div class="img-grid__item">
                             <picture>
-                              <source srcset="/img/home/ad-examples/digital_example_7.webp" type="image/webp"><img alt="digital_example_7" src="/img/home/ad-examples/digital_example_7.png">
+                              <source srcset="img/home/ad-examples/digital_example_7.webp" type="image/webp"><img alt="digital_example_7" src="img/home/ad-examples/digital_example_7.png">
                             </picture>
                           </div>
                           <div class="img-grid__item">
                             <picture>
-                              <source srcset="/img/home/ad-examples/digital_example_8.webp" type="image/webp"><img alt="digital_example_8" src="/img/home/ad-examples/digital_example_8.png">
+                              <source srcset="img/home/ad-examples/digital_example_8.webp" type="image/webp"><img alt="digital_example_8" src="img/home/ad-examples/digital_example_8.png">
                             </picture>
                           </div>
                           <div class="img-grid__item">
                             <picture>
-                              <source srcset="/img/home/ad-examples/digital_example_9.webp" type="image/webp"><img alt="digital_example_9" src="/img/home/ad-examples/digital_example_9.png">
+                              <source srcset="img/home/ad-examples/digital_example_9.webp" type="image/webp"><img alt="digital_example_9" src="img/home/ad-examples/digital_example_9.png">
                             </picture>
                           </div>
                         </div>
@@ -2800,47 +2800,47 @@
                         <div class="img-grid">
                           <div class="img-grid__item">
                             <picture>
-                              <source srcset="/img/home/ad-examples/static_example_1.webp" type="image/webp"><img alt="static_example_1" src="/img/home/ad-examples/static_example_1.png">
+                              <source srcset="img/home/ad-examples/static_example_1.webp" type="image/webp"><img alt="static_example_1" src="img/home/ad-examples/static_example_1.png">
                             </picture>
                           </div>
                           <div class="img-grid__item">
                             <picture>
-                              <source srcset="/img/home/ad-examples/static_example_2.webp" type="image/webp"><img alt="static_example_2" src="/img/home/ad-examples/static_example_2.png">
+                              <source srcset="img/home/ad-examples/static_example_2.webp" type="image/webp"><img alt="static_example_2" src="img/home/ad-examples/static_example_2.png">
                             </picture>
                           </div>
                           <div class="img-grid__item">
                             <picture>
-                              <source srcset="/img/home/ad-examples/static_example_3.webp" type="image/webp"><img alt="static_example_3" src="/img/home/ad-examples/static_example_3.png">
+                              <source srcset="img/home/ad-examples/static_example_3.webp" type="image/webp"><img alt="static_example_3" src="img/home/ad-examples/static_example_3.png">
                             </picture>
                           </div>
                           <div class="img-grid__item">
                             <picture>
-                              <source srcset="/img/home/ad-examples/static_example_4.webp" type="image/webp"><img alt="static_example_4" src="/img/home/ad-examples/static_example_4.png">
+                              <source srcset="img/home/ad-examples/static_example_4.webp" type="image/webp"><img alt="static_example_4" src="img/home/ad-examples/static_example_4.png">
                             </picture>
                           </div>
                           <div class="img-grid__item">
                             <picture>
-                              <source srcset="/img/home/ad-examples/static_example_5.webp" type="image/webp"><img alt="static_example_5" src="/img/home/ad-examples/static_example_5.png">
+                              <source srcset="img/home/ad-examples/static_example_5.webp" type="image/webp"><img alt="static_example_5" src="img/home/ad-examples/static_example_5.png">
                             </picture>
                           </div>
                           <div class="img-grid__item">
                             <picture>
-                              <source srcset="/img/home/ad-examples/static_example_6.webp" type="image/webp"><img alt="static_example_6" src="/img/home/ad-examples/static_example_6.png">
+                              <source srcset="img/home/ad-examples/static_example_6.webp" type="image/webp"><img alt="static_example_6" src="img/home/ad-examples/static_example_6.png">
                             </picture>
                           </div>
                           <div class="img-grid__item">
                             <picture>
-                              <source srcset="/img/home/ad-examples/static_example_7.webp" type="image/webp"><img alt="static_example_7" src="/img/home/ad-examples/static_example_7.png">
+                              <source srcset="img/home/ad-examples/static_example_7.webp" type="image/webp"><img alt="static_example_7" src="img/home/ad-examples/static_example_7.png">
                             </picture>
                           </div>
                           <div class="img-grid__item">
                             <picture>
-                              <source srcset="/img/home/ad-examples/static_example_8.webp" type="image/webp"><img alt="static_example_8" src="/img/home/ad-examples/static_example_8.png">
+                              <source srcset="img/home/ad-examples/static_example_8.webp" type="image/webp"><img alt="static_example_8" src="img/home/ad-examples/static_example_8.png">
                             </picture>
                           </div>
                           <div class="img-grid__item">
                             <picture>
-                              <source srcset="/img/home/ad-examples/static_example_9.webp" type="image/webp"><img alt="static_example_9" src="/img/home/ad-examples/static_example_9.png">
+                              <source srcset="img/home/ad-examples/static_example_9.webp" type="image/webp"><img alt="static_example_9" src="img/home/ad-examples/static_example_9.png">
                             </picture>
                           </div>
                         </div>
@@ -2851,47 +2851,47 @@
                         <div class="img-grid">
                           <div class="img-grid__item">
                             <picture>
-                              <source srcset="/img/home/ad-examples/other_example_1.webp" type="image/webp"><img alt="other_example_1" src="/img/home/ad-examples/other_example_1.png">
+                              <source srcset="img/home/ad-examples/other_example_1.webp" type="image/webp"><img alt="other_example_1" src="img/home/ad-examples/other_example_1.png">
                             </picture>
                           </div>
                           <div class="img-grid__item">
                             <picture>
-                              <source srcset="/img/home/ad-examples/other_example_2.webp" type="image/webp"><img alt="other_example_2" src="/img/home/ad-examples/other_example_2.png">
+                              <source srcset="img/home/ad-examples/other_example_2.webp" type="image/webp"><img alt="other_example_2" src="img/home/ad-examples/other_example_2.png">
                             </picture>
                           </div>
                           <div class="img-grid__item">
                             <picture>
-                              <source srcset="/img/home/ad-examples/other_example_3.webp" type="image/webp"><img alt="other_example_3" src="/img/home/ad-examples/other_example_3.png">
+                              <source srcset="img/home/ad-examples/other_example_3.webp" type="image/webp"><img alt="other_example_3" src="img/home/ad-examples/other_example_3.png">
                             </picture>
                           </div>
                           <div class="img-grid__item">
                             <picture>
-                              <source srcset="/img/home/ad-examples/other_example_4.webp" type="image/webp"><img alt="other_example_4" src="/img/home/ad-examples/other_example_4.png">
+                              <source srcset="img/home/ad-examples/other_example_4.webp" type="image/webp"><img alt="other_example_4" src="img/home/ad-examples/other_example_4.png">
                             </picture>
                           </div>
                           <div class="img-grid__item">
                             <picture>
-                              <source srcset="/img/home/ad-examples/other_example_5.webp" type="image/webp"><img alt="other_example_5" src="/img/home/ad-examples/other_example_5.png">
+                              <source srcset="img/home/ad-examples/other_example_5.webp" type="image/webp"><img alt="other_example_5" src="img/home/ad-examples/other_example_5.png">
                             </picture>
                           </div>
                           <div class="img-grid__item">
                             <picture>
-                              <source srcset="/img/home/ad-examples/other_example_6.webp" type="image/webp"><img alt="other_example_6" src="/img/home/ad-examples/other_example_6.png">
+                              <source srcset="img/home/ad-examples/other_example_6.webp" type="image/webp"><img alt="other_example_6" src="img/home/ad-examples/other_example_6.png">
                             </picture>
                           </div>
                           <div class="img-grid__item">
                             <picture>
-                              <source srcset="/img/home/ad-examples/other_example_7.webp" type="image/webp"><img alt="other_example_7" src="/img/home/ad-examples/other_example_7.png">
+                              <source srcset="img/home/ad-examples/other_example_7.webp" type="image/webp"><img alt="other_example_7" src="img/home/ad-examples/other_example_7.png">
                             </picture>
                           </div>
                           <div class="img-grid__item">
                             <picture>
-                              <source srcset="/img/home/ad-examples/other_example_8.webp" type="image/webp"><img alt="other_example_8" src="/img/home/ad-examples/other_example_8.png">
+                              <source srcset="img/home/ad-examples/other_example_8.webp" type="image/webp"><img alt="other_example_8" src="img/home/ad-examples/other_example_8.png">
                             </picture>
                           </div>
                           <div class="img-grid__item">
                             <picture>
-                              <source srcset="/img/home/ad-examples/other_example_9.webp" type="image/webp"><img alt="other_example_9" src="/img/home/ad-examples/other_example_9.png">
+                              <source srcset="img/home/ad-examples/other_example_9.webp" type="image/webp"><img alt="other_example_9" src="img/home/ad-examples/other_example_9.png">
                             </picture>
                           </div>
                         </div>
@@ -2955,7 +2955,7 @@
             <div class="close-popup popup__close">&#x2715;</div>
             <div class="popup__body"><img class="popup__img" src="img/svg/check.svg" alt="Done">
               <h2 class="title-sm popup__title">Thank you.</h2>
-              <p class="text-md popup__text"><span class="active" id="question-form-text">Thank you. We will reach out to you shortly.</span><span id="cta-form-text">Media kit will be arriving shortly.</span></p>
+              <p class="text-md popup__text"><span id="cta-form-text">Media kit will be arriving shortly.</span><span id="question-form-text">Thank you. We will reach out to you shortly.</span></p>
               <div class="popup__cta"><span class="btn btn--second close-popup">Go Back</span></div>
             </div>
           </div>
@@ -2989,6 +2989,6 @@
         </div>
       </footer>
     </div>
-    <script src="js/main.min.js?_v=20230401205716"></script>
+    <script src="js/main.min.js?_v=20230415181233"></script>
   </body>
 </html>
